--- a/src/assets/Otherprof.css
+++ b/src/assets/Otherprof.css
@@ -1,6 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap'); */
 
-#profil_containe{
+/* #profil_containe{
    
    font-family: 'Caudex',serif;
 }
@@ -69,10 +69,10 @@
  }
 
 
-}
+} */
 
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
     #profil_containe{
       
         
@@ -129,4 +129,4 @@
       
    }
    
-}
+} */
