--- a/src/assets/Otherprof.css
+++ b/src/assets/Otherprof.css
@@ -1,6 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap'); */
 
-/* #profil_containe{
+#profil_containe{
    
    font-family: 'Caudex',serif;
 }
@@ -69,7 +69,7 @@
  }
 
 
-} */
+}
 
 
 /* @media screen and (max-width: 600px) {
