--- a/src/assets/Otherprof.css
+++ b/src/assets/Otherprof.css
@@ -72,7 +72,7 @@
 }
 
 
-/* @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     #profil_containe{
       
         
@@ -129,4 +129,4 @@
       
    }
    
-} */
+}
