--- a/src/assets/css/Loc.css
+++ b/src/assets/css/Loc.css
@@ -1,10 +1,6 @@
 .whole {
-  background-image: linear-gradient(
-    to top,
-    #ff9a9e 0%,
-    hsl(319, 96%, 90%) 99%,
-    #fecfef 100%
-  );
+  background-image: url('../../Images/loc-wall.jpg');
+  background-size: cover;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -29,7 +25,8 @@
   display: flex;
 }
 .sos-container {
-  margin-right: 10%;
+  margin-right: auto;
+  margin-left: auto;
   position: relative;
   width: 400px;
   height: 400px;
@@ -60,46 +57,51 @@
   animation: ripple 1s infinite;
 }
 .outer-circle {
-  background-color: rgba(251, 14, 14, 0.3);
+  background-color: rgba(255, 255, 255, 0.3);
   animation-delay: 0.75s;
 }
 
 .inner-circle {
-  background-color: rgba(242, 19, 19, 0.5);
+  background-color: rgba(234, 110, 110, 0.5);
   animation-delay: 1s;
 }
 .sos-button {
   position: absolute;
   font-size: 45px;
   width: 100%;
+  color: red;
   height: 100%;
   font-weight: 900;
   margin-bottom: 15px;
   border-radius: 50%;
-  background-color: rgb(243, 56, 56);
+  background-color: rgb(247, 242, 242);
   cursor: pointer;
+}
+.loc-spacing{
+  height: 9%;
 }
 
 
 /* Media query for smaller screens */
 @media screen and (max-width: 800px) {
   .wholeM {
-    background-image: linear-gradient(
-      to top,
-      #ff9a9e 0%,
-      #fecfef 99%,
-      #fecfef 100%
-    );
+    background-image: url('../../Images/loc-wall.jpg');
+    background-size: cover;
     height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
-
+    overflow: hidden;
     align-items: center;
     justify-content: space-evenly;
   }
   .whole {
     display: none;
+    
+  }
+  .sos-container {
+    margin-right:0;
+    margin-left: 0;
     
   }
   
