--- a/src/assets/css/pending.css
+++ b/src/assets/css/pending.css
@@ -3,7 +3,8 @@
   color: black;
   justify-content: center;
   align-items: center;
-background-color: #738ccc;
+  background-image: url('../../Images/loc-wall.jpg');
+  background-size: cover;
   height: 100vh;
   width: 100vw;
 }
@@ -13,8 +14,8 @@ background-color: #738ccc;
   margin-left: auto;
   margin-right: auto;
   vertical-align: top;
-  margin-top: 20px;
-  width: 40%;
+ 
+  width: 70%;
   background-color: rgb(241, 241, 241);
   height: 560px;
   border-radius: 10px;
@@ -45,6 +46,8 @@ th{
   border-bottom: 2px solid #3baeca;
 }
 
+
+
 .table-content::-webkit-scrollbar {
   width: 12px;
 }
@@ -56,29 +59,35 @@ th{
 }
 
 .table-content::-webkit-scrollbar-thumb {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(224, 221, 221);
   border-radius: 10px;
 }
 #buto{
   
-  background-color: #FF003F;
+  background-color: #ffffff;
+  color: black;
+  border: 1px solid black;
   padding: 0.4vh;
    
 }
 #buto:hover{
   
-  background-color: #EF0107;
+  background-color: #f7f7f7;
 }
 
 @media screen and (min-width: 601px){
   th,td{
-    padding: 10px;
+    padding:10px;
    }
 
 }
 /*mobile screen */
 
   @media screen and (max-width: 600px) {
+    .table-container{
+      background-image: url('../../Images/loc-wall.jpg');
+      background-size: cover;
+    }
     .table-content{
       border: 2px solid grey;
       border-radius: 10px;
