--- a/src/assets/css/Emergency2.css
+++ b/src/assets/css/Emergency2.css
@@ -1,10 +1,11 @@
 .emergency-list{
-    background-color: #738ccc;
+    background-image: url('../../Images/loc-wall.jpg');
+    background-size: cover;
     height: 100vh;
     width: 100vw;
 }
 .emergency-hed {
-    margin-top: 4vh;
+    margin-top: 1vh;
     text-align: center;
 }
 
@@ -15,6 +16,7 @@
     border-radius: 5px;
     border-color: white;
     padding: 5px;
+    margin-top: -6vh;
     margin-bottom: 5px;
     margin-left: 30%;
     /* margin-right: 2vh; */
@@ -37,7 +39,7 @@
     margin-right: auto;
     vertical-align: top;
     margin-top: 5px;
-    width: 40%;
+    width: 50%;
     background-color: rgb(241, 241, 241);
     height: 340px;
     border-radius: 10px;
@@ -46,8 +48,8 @@
     background-color: rgb(252, 252, 252);
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
-    height: 60%;
+    width: 120%;
+    height: 70%;
     border-spacing: 0;
   }
   
@@ -57,15 +59,15 @@
   
   tr{
     text-align: center;
-    border-bottom: 0.5px solid rgb(255, 255, 255);
+    border-bottom: 0.5px solid rgb(120, 69, 69);
   }
   th{
     position: sticky;
     top: 0px;
     padding-top: 5px;
     padding-bottom: 5px;
-    background-color: rgb(166, 192, 249);
-    border-bottom: 2px solid #3baeca;
+    background-color: rgb(255, 81, 81);
+    border-bottom: 2px solid #ffffff;
   }
   
   .table-conte::-webkit-scrollbar {
@@ -84,23 +86,30 @@
   }
   #buito{
     
-    background-color: #FF003F;
+    background-color: #ffffff;
+    color: black;
+    width: 70%;
     padding: 0.4vh;
+    transition: 0.3s;
      
   }
   #buito:hover{
     
-    background-color: #EF0107;
+    background-color: #fcfafa;
   }
   
 
   /*mobile screen */
   
     @media screen and (max-width: 600px) {
+      .emergency-list{
+        background-image: url('../../Images/loc-wall.jpg');
+        background-size: cover;
+    }
       .table-conte{
         border: 2px solid grey;
         border-radius: 10px;
-        width: 80%;
+        width: 90%;
         overflow: auto;
       }
    
@@ -109,10 +118,12 @@
        }
        
        .emergency-hed {
-        margin-top: 8vh;
+        margin-top: 3vh;
+        font-size: 40px;
         text-align: center;
     }
     .emergency-par{
+      margin-top: 2vh;
         margin-left: 14%;
         /* margin-right: 50%; */
         width: 70%;
