--- a/src/assets/css/Profile.css
+++ b/src/assets/css/Profile.css
@@ -1,15 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap'); */
 
 #profile_container{
-   
+   background-image: url('../../Images/profile-backg.png');
+    background-size: cover;
    font-family: 'Caudex',serif;
+   
+   overflow: hidden;
 }
 
 @media screen and (min-width: 601px)
  {
  #profile_container{
     position: fixed;
-    background-image: url('./defcon.jpg');
+    
     height: 100vh;
     width: 100vw;
  }
@@ -67,7 +70,7 @@
     background-color: rgb(104, 160, 170);
  }
  .log_desk:hover{
-   background-color: rgb(214, 156, 47);
+   background-color: rgb(177, 175, 175);
    transition: 0.3s ease-out;
  }
  .log_mob{
@@ -80,16 +83,13 @@
 @media screen and (max-width: 600px) {
     #profile_container{
       
-        
-        
-        background-image: url('./defcon_mob.jpg');
-        
         height: 100vh;
         width: 100vw;
      }
      .profile-picture {
       width: 150px;
       height: 150px;
+ 
       border-radius: 50%;
       object-fit: cover;
       margin-top: -10%;
@@ -106,8 +106,8 @@
    }
    .edit-button-container {
       
-     margin-left: 60%;
-     margin-top: -30%;
+     margin-left: 50%;
+     margin-top: -20%;
      margin-bottom: 30%;
     }
    .prof_name{
@@ -115,7 +115,7 @@
         font-weight: bold;
        padding: 0.1vh 1vw;
        margin-left: -20%;
-       margin-top: -12%;
+       margin-top: -16%;
        color: rgb(148, 223, 226);
    }
    .prof_type{
