--- a/src/assets/css/DisasterPage.css
+++ b/src/assets/css/DisasterPage.css
@@ -62,6 +62,18 @@
         margin-right: 2vh;
        
     }
+    .back-buttondis{
+        background-color: transparent;
+        
+     
+       float: right;
+
+        font-size: 32px;
+        transform: translateX(-52vh);
+        margin-top: -4vh;
+         margin-bottom: -3vh;
+        
+    }
 }
 
 
@@ -100,5 +112,17 @@
         margin-left: 2vh;
         margin-right: 2vh;
        
+    }
+    .back-buttondis{
+        background-color: transparent;
+        
+     
+       float: right;
+
+        font-size: 26px;
+        transform: translateX(-19vh);
+        margin-top: -9.5vh;
+         margin-bottom: -3vh;
+        
     }
 }
