--- a/src/assets/css/Emergency2.css
+++ b/src/assets/css/Emergency2.css
@@ -75,13 +75,13 @@
   }
   
   .table-conte::-webkit-scrollbar-track {
-    background-color: rgb(239, 239, 239);
+    background-color: rgb(133, 128, 128);
     -webkit-box-shadow: 0 0 6px rgba(245, 0, 0, 0.3); 
     border-radius: 10px;
   }
   
   .table-conte::-webkit-scrollbar-thumb {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(211, 210, 210);
     border-radius: 10px;
   }
   #buito{
@@ -128,6 +128,9 @@
         /* margin-right: 50%; */
         width: 70%;
         
+    }
+    #buito{
+      width: 100%;
     }
     .emergency-par span {
         display: block;
